--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,3 +1,9 @@
 <h1> finally here... </h1>
 
+<p><%= @welcome.text %></p>
+
 <%= @welcome.number %>
+
+<br>
+
+<%= link_to 'Edit this', edit_welcome_path(@welcome) %>
